# computer_link

./: README.md  setup.cfg
computer_link/: __init__.py  __main__.py
computer_link/audio/: __init__.py  config.py  share.py
