[metadata]
name = computer_link
version = 0.1.0
license = LGPL
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows

[options]
include_package_data = True
packages =
    computer_link
    computer_link.audio
install_requires =
    pyaudio==0.2.12
    termcolor==2.4.0
    python-tk>=8.6.10
python_requires = >=3.11
zip_safe = no